@startuml

title __REDEDANISKAL's Class Diagram__\n

  package ca.rededaniskal {
    class Book {
        - title : String
        - author : String
        - isbn : String
        + Book()
        + getTitle()
        + setTitle()
        + getAuthor()
        + setAuthor()
        + getISBN()
        + setISBN()
    }
  }
  

  package ca.rededaniskal {
    abstract class BookExchange {
        - location : String
        - time : Date
        - owner : String
        - borrower : String
        - isbn : String
        - bookid : int
        + BookExchange()
        + getLocation()
        + setLocation()
        + getTime()
        + setTime()
        + getOwner()
        + setOwner()
        + getBorrower()
        + setBorrower()
        + getIsbn()
        + setIsbn()
        + getBookid()
        + setBookid()
        + scanISBN()
        {abstract} + updateBookStatus()
    }
  }
  

  package ca.rededaniskal {
    class BookInstance {
        - owner : String
        - possessor : String
        - condition : String
        - status : String
        - requests : ArrayList<Request>
        + BookInstance()
        + addRequest()
        + deleteRequest()
        + getAllRequests()
        + getOwner()
        + getPossessor()
        + setPossessor()
        + getCondition()
        + setCondition()
        + setStatus()
        + getStatus()
    }
  }
  

  package ca.rededaniskal {
    class BookList {
        - books : ArrayList<BookInstance>
        + BookList()
        + addBook()
        + removeBook()
        + getBookByIndex()
        + getBooks()
        + getBooksByStatus()
        + size()
        + clear()
    }
  }
  

  package ca.rededaniskal {
    class BookNotification {
        - bookRequestType : String
        - message : String
        + BookNotification()
        + getBookRequestType()
        + setBookRequestType()
        + requestType()
        + getMessage()
        + setMessage()
        + acceptedMessage()
        + requestedMessage()
        + borrowReturnedMessage()
        + ownerReturnedMessage()
    }
  }
  

  package ca.rededaniskal {
    class BorrowRequest {
        - isbn : String
        - bookId : int
        + BorrowRequest()
        + getIsbn()
        + setIsbn()
        + getBookId()
        + setBookId()
    }
  }
  

  package ca.rededaniskal {
    class CheckIn {
        + CheckIn()
        + updateBookStatus()
        + addBookToBorrowed()
    }
  }
  

  package ca.rededaniskal {
    class CheckOut {
        + CheckOut()
        + updateBookStatus()
        + removeBookFromBorrowed()
    }
  }
  

  package ca.rededaniskal {
    class Forum {
        - posts : ArrayList<Post>
        - forumID : String
        - userName : String
        + Forum()
        + addPost()
        + hasPost()
        + deletePost()
        + getForumID()
        + getUserName()
    }
  }
  

  package ca.rededaniskal {
    class FriendNotification {
        - friendType : String
        - message : String
        + FriendNotification()
        + getFriendType()
        + setFriendType()
        + requestType()
        + getMessage()
        + setMessage()
        + acceptedMessage()
        + requestedMessage()
    }
  }
  

  package ca.rededaniskal {
    class FriendRequest {
        + FriendRequest()
    }
  }
  

  package ca.rededaniskal {
    class MainActivity {
        # onCreate()
    }
  }
  

  package ca.rededaniskal {
    class MasterBook {
        - avgRating : Double
        - totalNumRating : Integer
        - sumRatings : Double
        - mapUsersRating : HashMap<String, Double>
        + MasterBook()
        + addRating()
        + getAvgRating()
        + getUserRating()
        + deleteUserRating()
    }
  }
  

  package ca.rededaniskal {
    class Notification {
        - timestamp : Date
        - username : String
        + Notification()
        + getTimestamp()
        + setTimestamp()
        + getUsername()
        + setUsername()
        + getRequest()
        + setRequest()
        + viewRequest()
    }
  }
  

  package ca.rededaniskal {
    class Post {
        - message : String
        - timestamp : Date
        - userName : String
        - replyTarget : String
        + Post()
        + Post()
        + getMessage()
        + setMessage()
        + getTimestamp()
        + getUserName()
        + getReplyTarget()
        + setTimestamp()
        + setUserName()
        + setReplyTarget()
    }
  }
  

  package ca.rededaniskal {
    class Request {
        - senderUserName : String
        - recipientUserName : String
        - requestType : String
        - status : String
        - requestId : int
        + Request()
        + getSenderUserName()
        + setSenderUserName()
        + getRecipientUserName()
        + setRecipientUserName()
        + getRequestType()
        + setRequestType()
        + getStatus()
        + setStatus()
        + accept()
        + deny()
        + cancel()
        + getRequestId()
        + setRequestId()
    }
  }
  

  package ca.rededaniskal {
    class User {
        - userName : String
        - email : String
        - phoneNumber : String
        - location : String
        - profilePic : String
        - friends : ArrayList<User>
        - blockedUsers : ArrayList<User>
        + User()
        + User()
        + getFavBook()
        + setFavBook()
        + getProfilePic()
        + setProfilePic()
        + getRequestedBooks()
        + setRequestedBooks()
        + getUserName()
        + setUserName()
        + getEmail()
        + setEmail()
        + getPhoneNumber()
        + setPhoneNumber()
        + getLocation()
        + setLocation()
        + getFriends()
        + setFriends()
        + getOwnedBooks()
        + setOwnedBooks()
        + getBorrowedBooks()
        + setBorrowedBooks()
        + getBlockedUsers()
        + setBlockedUsers()
        + addRequestedBook()
        + deleteRequestedBook()
        + addOwnedBook()
        + deleteOwnedBook()
        + removeAllOwnedBooks()
        + addBorrowedBook()
        + deleteBorrowedBook()
        + addFriend()
        + removeFriend()
        + removeAllFriends()
        + addBlockedUser()
        + removeBlockedUser()
        + deleteProfile()
        + allBooksReturned()
    }
  }
  

  BookInstance -up-|> Book
  BookNotification -up-|> Notification
  BorrowRequest -up-|> Request
  CheckIn -up-|> BookExchange
  CheckOut -up-|> BookExchange
  Forum o-- Post : newPost
  Forum o-- MasterBook : Book
  FriendNotification -up-|> Notification
  FriendRequest -up-|> Request
  MainActivity -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  MasterBook -up-|> Book
  Notification o-- Request : request
  User o-- BookList : ownedBooks
  User o-- BookList : borrowedBooks
  User o-- BookList : requestedBooks
  User o-- MasterBook : favBook


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
